django-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django-app
    owner: Alena
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-django
  template:
    metadata:
      labels:
        app: k8s-django
    spec:
      containers:
        - name: django-app
          image: django_app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    env: dev
    owner: Alena
spec:
  type: NodePort
  selector:
    app: k8s-django
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
